@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,14 +23,18 @@
 
 /*
  * @test
- * @bug 4018937 8008577
+ * @bug 4018937 8008577 8174269 8333755
  * @summary Confirm that methods which are newly added to support BigDecimal and BigInteger work as expected.
- * @run junit/othervm -Djava.locale.providers=COMPAT,SPI BigDecimalParse
+ * @run junit/othervm BigDecimalParse
  */
 
 import java.math.BigDecimal;
-import java.text.*;
-import java.util.*;
+import java.text.DecimalFormat;
+import java.text.Format;
+import java.text.MessageFormat;
+import java.text.NumberFormat;
+import java.text.ParsePosition;
+import java.util.Locale;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeAll;
@@ -42,7 +46,7 @@ public class BigDecimalParse {
     // Change JVM default Locale
     @BeforeAll
     static void initAll() {
-        Locale.setDefault(Locale.US);
+        Locale.setDefault(Locale.forLanguageTag("en-US-u-cf-account"));
     }
 
 
@@ -240,7 +244,7 @@ public class BigDecimalParse {
 
         // From: Double.NaN
         // To:   Double.NaN
-        check("\ufffd", Double.NaN);
+        check("NaN", Double.NaN);
 
         // From: Double.POSITIVE_INFINITY
         // To:   Double.NaN
@@ -350,7 +354,7 @@ public class BigDecimalParse {
         df.setParseBigDecimal(true);
 
         String[] numbers = {
-            "0", "0.0", "25", "25.0", "25.5", "\u221e", "\ufffd",
+            "0", "0.0", "25", "25.0", "25.5", "\u221e", "NaN",
             "-0", "-0.0", "-25", "-25.0", "-25.5", "-\u221e",
         };
         int multipliers[] = {5, -5};
@@ -543,23 +547,23 @@ public class BigDecimalParse {
     static final int[][] parsePosition2 = {     // {errorIndex, index}
         /*
          * Should keep in mind that the expected result is different from
-         * DecimalFormat.parse() for some cases.
+         * DecimalFormat.parse() for some cases. This is because parsing integer
+         * only will return a successful parse for the subformat, but since the index
+         * returned is not equal to the length, at the MessageFormat level, this
+         * will be interpreted as a failed parse, and so the DecimalFormat index
+         * should be reflected as the MessageFormat errorIndex.
          */
         {28, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
-        {2, 0},         // parsing stopped at '(' because cannot find ')'
-        {2, 0},         // parsing stopped at the first numeric
-                        // because cannot find '%'
-        {2, 0},         // parsing stopped at the first numeric
-                        // because cannot find '%'
+        {30, 0},        // parsing stopped at '.'
+        {31, 0},        // parsing stopped at '.'
+        {32, 0},        // parsing stopped at '.'
         {28, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
-
         {-1, 57}, {-1, 58}, {-1, 59}, {-1, 61},
         {56, 0},        // parsing stopped at '.'
-                        // because cannot find '%'
-        {2, 0},         // parsing stopped at '(' because cannot find ')'
+        {57, 0},        // parsing stopped at '.'
         {-1, 60}, {-1, 61},
         {28, 0},        // parsing stopped at '.'
         {-1, 88},
